# badminton_play_prediction_bot

./: .env.example  .gitignore  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  app.py  environment.yml  fly.toml  pyproject.toml  railway.toml  render.yaml  requirements-bots.txt  requirements.txt  run_project.sh  setup_aws.sh  setup_bot.sh  start.sh  vercel.json
api/: index.py  requirements.txt
data/: sample_station.csv
deployment/: README.md
deployment/aws/: README.md  application.py  deploy.sh  requirements.txt
deployment/aws/.ebextensions/: environment.config
deployment/aws/.platform/hooks/predeploy/: setup_bot.sh
deployment/fly/: README.md
deployment/hf_space/: README.md  app.py  requirements.txt
deployment/railway/: README.md
deployment/render/: README.md
deployment/vercel/: README.md
experiments/latest/: model.keras
scripts/: make_sample_data.py
src/: __init__.py
src/cli/: train.py
src/integrations/: telegram_bot.py
